Fixed navbar and scroll to top spacing issue

--- a/style.css
+++ b/style.css
@@ -5,20 +5,21 @@ body {
 
 #home {
     text-align: center;
-    margin: 0;
-    padding: 0;
+    padding-top: 3rem;
+    scroll-margin-top: 3rem;
 }
 
 #name {
     color: purple;
-    font-size: 50px;
+    font-size: 30px;
+    font-size: 2.8vw;
 }
 
 .navbar {
     background: #B0C4DE;
     width: 100%;
+    position: fixed;
     top: 0px;
-    overflow: hidden;
 }
 
 .navList {
@@ -60,10 +61,4 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 0;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
 }
